# cyrene

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: build.yml  publish.yml
src/: App.vue  NavBar.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: backup.rs  constants.rs  lib.rs  main.rs  write.rs  xlsx.rs
src/components/: EditPage.vue  EditPageReal.vue  ExportPage.vue  ExportPageReal.vue  HomePage.vue  LanguageSwitcher.vue  NavBar.vue  SettingPage.vue  TreeFiles.vue
src/components/basic/: Button.vue  Divider.vue
src/components/navbar/: NavItem.vue
src/components/tree/: TreeNode.vue  jsonEditor.vue
src/composables/: useLanguage.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.json  en.json  zh-CN.json  zh.json
src/stores/: useFilesStore.ts
src/utils/: buildFileTree.ts  exportToXLSX.ts  getRelativePath.ts  tauri.ts  types.d.ts
