[package]
name = "cyrene"
version = "0.1.0"
description = "A Tauri application for editing frontmatter in Markdown files."
authors = [ "zkz098" ]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "frontmatter_editor_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_yaml_ng = "0.10"
walkdir = "2"
num_cpus = "1.17.0"
rayon = "1.10.0"
tauri-plugin-dialog = "2"
umya-spreadsheet = "2.3.1"
mimalloc = { version = "0.1", features = [ "override" ] }
indexmap = { version = "2", features = [
  "serde",
  "rayon",
  "std"
] }
ahash = "0.8"
tauri-plugin-process = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"
strip = true
incremental = false

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
